# zenrows-deviceprofiles

./: Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
DOCS/: HIGH_LEVEL_DESIGN.md  PLANNING.md  SWAGGER_PLAYBOOK.md
app/: main.py
app/api/routes/: device_profiles.py  health.py
app/auth/: crypto.py  middleware.py  pipeline.py  repository.py  service.py
app/core/: config.py  idempotency.py
app/db/: __init__.py  models.py  scoping.py  session.py
app/orchestrator/: base.py  orchestrator.py
app/profiles/: dto.py  pipeline.py  repository.py
migrations/: env.py
migrations/versions/: 3d5cd6910978_rebaseline_models.py  a1b2c3d4e5f6_add_key_prefix_to_api_keys.py  c20ba405a79e_baseline.py
scripts/: db_smoketest.py  dev.ps1  makemigrations.ps1  migrate-up.ps1  seed_api_key.py  seed_templates.py  test.ps1
tests/: conftest.py  test_api_missing_branches.py  test_auth.py  test_auth_crypto.py  test_auth_pipeline.py  test_config.py  test_health.py  test_idempotency.py  test_idempotency_and_snapshots.py  test_m5_pagination_and_filters.py  test_migrations.py  test_models.py  test_orchestrator.py  test_pipeline_transformers_coverage.py  test_profiles.py  test_profiles_extras.py  test_repository_and_dto_coverage.py  test_repository_filters_coverage.py  test_routes_error_branches.py  test_scoping.py  test_templates_clone.py  test_versions.py  test_versions_access.py  test_versions_snapshot.py  test_versions_unit.py
